fix: add missing dependency
Closes #1

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pouchdb-sync-to-anything",
-  "version": "0.0.1",
+  "version": "0.2.0",
   "description": "Use PouchDB's sequences and checkpoints to sync to something that's not CouchDB",
   "repository": "https://github.com/karlwestin/pouchdb-sync-to-anything",
   "main": "index.js",
@@ -21,6 +21,7 @@
   "dependencies": {
     "inherits": "^2.0.3",
     "pouchdb-checkpointer": "6.1.2",
+    "pouchdb-generate-replication-id": "^6.1.2",
     "pouchdb-utils": "6.1.2"
   }
 }
